--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
+  google_fonts: ^4.0.4
+  map_launcher: ^2.5.0+1
+  maps_launcher: ^2.2.0
+  intl: ^0.18.1
+  syncfusion_flutter_charts: ^23.1.41
+  syncfusion_flutter_datepicker: ^23.1.41
+  calendar_date_picker2: ^0.5.3
 
 dev_dependencies:
   flutter_test:
