--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   syncfusion_flutter_charts: ^23.1.41
   syncfusion_flutter_datepicker: ^23.1.41
   calendar_date_picker2: ^0.5.3
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
