--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   syncfusion_flutter_datepicker: ^23.1.41
   calendar_date_picker2: ^0.5.3
   flutter_svg: ^2.0.9
+  shared_preferences: ^2.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  build_runner: ^2.4.6
+  hive_generator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
