--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   hive_generator: ^2.0.1
   syncfusion_flutter_gauges: ^23.2.4
   share_plus: "^7.2.1"
+  url_launcher: ^6.2.2
 
 dev_dependencies:
   flutter_test:
