--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -51,6 +51,8 @@ dependencies:
   syncfusion_flutter_gauges: ^23.2.4
   share_plus: "^7.2.1"
   url_launcher: ^6.2.2
+  connectivity_plus: ^6.0.3
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
