--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1
+version: 1.0.2
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -53,6 +53,9 @@ dependencies:
   url_launcher: ^6.2.2
   connectivity_plus: ^6.0.3
   package_info_plus: ^8.0.0
+  pdf: ^3.11.0
+  path_provider: ^2.1.3
+  syncfusion_flutter_pdf: ^23.2.7
 
 dev_dependencies:
   flutter_test:
