--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2
+version: 1.0.3
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -36,8 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
-  google_fonts: ^4.0.4
-  map_launcher: ^2.5.0+1
+  map_launcher: ^3.5.0
   maps_launcher: ^2.2.0
   syncfusion_flutter_charts: ^23.1.41
   syncfusion_flutter_datepicker: ^23.1.41
