--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.3
+version: 1.1.4
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -37,8 +37,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   map_launcher: ^3.5.0
-  syncfusion_flutter_charts: ^23.1.41
-  syncfusion_flutter_datepicker: ^23.1.41
   calendar_date_picker2: ^0.5.3
   flutter_svg: ^2.0.9
   shared_preferences: ^2.2.2
@@ -46,14 +44,15 @@ dependencies:
   hive_flutter: ^1.1.0
   build_runner: ^2.4.6
   hive_generator: ^2.0.1
-  syncfusion_flutter_gauges: ^23.2.4
   share_plus: "^7.2.1"
   url_launcher: ^6.2.2
   connectivity_plus: ^6.0.3
   package_info_plus: ^8.0.0
   pdf: ^3.11.0
   path_provider: ^2.1.3
-  syncfusion_flutter_pdf: ^23.2.7
+  google_fonts: ^4.0.4
+  syncfusion_flutter_datepicker: ^23.1.41
+  graphic: ^2.5.1
 
 dev_dependencies:
   flutter_test:
